--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "deprecated": false,
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "babel src --out-dir . --ignore __tests__",
     "watch": "babel -w src --out-dir . --ignore __tests__"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2.1"
   },
   "dependencies": {
     "graphql-request": "^1.3.4",
