--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "scripts": {
     "test": "jest",
     "build": "babel src --out-dir . --ignore __tests__",
-    "watch": "babel -w src --out-dir . --ignore __tests__"
+    "watch": "babel -w src --out-dir . --ignore __tests__",
+    "prepublish": "cross-env NODE_ENV=production npm run build"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "cross-env": "^5.1.1",
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "graphql-request": "^1.3.4",
     "ramda": "^0.24.1"
   }
