--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "name": "gatsby-source-graphcms",
   "description": "Gatsby source plugin for building websites using the GraphCMS as a data source.",
   "keywords": [
+    "data",
     "gatsby",
-    "graphcms"
+    "gatsby-plugin",
+    "graphcms",
+    "graphql",
+    "source"
   ],
   "homepage": "https://github.com/GraphCMS/gatsby-source-graphcms",
   "repository": {
@@ -30,7 +34,6 @@
     "babel-cli": "6.26.0",
     "babel-eslint": "8.0.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "cross-env": "5.1.1",
     "jest": "21.2.1",
@@ -49,7 +52,10 @@
     "overrides": [
       {
         "files": "src/__tests__/*.js",
-        "globals": ["it", "expect"]
+        "globals": [
+          "it",
+          "expect"
+        ]
       }
     ]
   },
