feat: add renovate config for devDependencies

--- a/package.json
+++ b/package.json
@@ -68,6 +68,15 @@
     ],
     "assignees": [
       "rdela"
-    ]
+    ],
+    "devDependencies": {
+      "schedule": [
+        "on the first day of the month"
+      ],
+      "automerge": true,
+      "major": {
+        "automerge": false
+      }
+    }
   }
 }
