--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1",
+  "version": "0.0.2",
   "name": "gatsby-source-graphcms",
   "description": "Gatsby source plugin for building websites using the GraphCMS as a data source.",
   "keywords": [
@@ -26,8 +26,7 @@
     "test": "jest",
     "build": "babel src --out-dir . --ignore __tests__",
     "watch": "babel -w src --out-dir . --ignore __tests__",
-    "lint": "xo",
-    "format": "xo --fix",
+    "lint": "xo --fix",
     "prepublish": "cross-env NODE_ENV=production npm run build"
   },
   "devDependencies": {
