--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-cli": "6.26.0",
     "babel-eslint": "8.1.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "1.6.1",
     "cross-env": "5.1.3",
     "jest": "21.2.1",
