--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "graphql-request": "^1.3.4",
+    "graphql-request": "^1.5.1",
     "ramda": "^0.25.0"
   },
   "xo": {
@@ -52,9 +52,8 @@
     "overrides": [
       {
         "files": "src/__tests__/*.js",
-        "globals": [
-          "it",
-          "expect"
+        "env": [
+          "jest"
         ]
       }
     ]
