--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "deprecated": false,
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "build": "babel src --out-dir . --ignore __tests__",
+    "test": "yarn lint && jest",
+    "build": "yarn test && babel src --out-dir . --ignore __tests__",
     "watch": "babel -w src --out-dir . --ignore __tests__",
     "lint": "xo --fix",
     "prepublish": "cross-env NODE_ENV=production npm run build"
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "graphql-request": "^1.3.4",
+    "graphql-request": "^1.5.1",
+    "pluralize": "^7.0.0",
     "ramda": "^0.25.0"
   },
   "xo": {
@@ -52,9 +53,8 @@
     "overrides": [
       {
         "files": "src/__tests__/*.js",
-        "globals": [
-          "it",
-          "expect"
+        "env": [
+          "jest"
         ]
       }
     ]
