--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "yarn test && babel src --out-dir . --ignore __tests__",
     "watch": "babel -w src --out-dir . --ignore __tests__",
     "lint": "xo --fix",
-    "prepublish": "cross-env NODE_ENV=production npm run build"
+    "prepare": "cross-env NODE_ENV=production npm run build"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
