Disable all Docker Renovation
https://renovateapp.com/docs/language-support/docker#configuringdisabling

> Add `docker:disable` to your extends array.

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
   },
   "renovate": {
     "extends": [
-      "config:base"
+      "config:base",
+      "docker:disable"
     ],
     "labels": [
       "renovate"
