--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   "node-6":
     docker:
-      - image: circleci/node:6@sha256:e49c8c74394f369f60e24d0dec65b4097058769d68e44536a96bcfc67e934d01
+      - image: circleci/node:6
     working_directory: ~/repo
     steps:
       - checkout
@@ -26,7 +26,7 @@ jobs:
 
   "node-8":
     docker:
-      - image: circleci/node:8@sha256:257fdc7e2949a9576e1a96364e0428d461d0505167c70dcc3e6c3825ce8a6557
+      - image: circleci/node:8
     working_directory: ~/repo
     steps:
       - checkout
@@ -46,7 +46,7 @@ jobs:
 
   "node-9":
     docker:
-      - image: circleci/node:9@sha256:f08acb30cef8d8077e7b5f912092b40e390d67de845ce09f36bc818d741b5c04
+      - image: circleci/node:9
     working_directory: ~/repo
     steps:
       - checkout
