[renovate] default:pinDigestsDisabled instead of docker:disable

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "renovate": {
     "extends": [
       "config:base",
-      "docker:disable"
+      "default:pinDigestsDisabled"
     ],
     "labels": [
       "renovate"
