--- a/package.json
+++ b/package.json
@@ -1,97 +1,12 @@
 {
-  "version": "1.0.0",
-  "name": "gatsby-source-graphcms",
-  "description": "Gatsby source plugin for building websites using the GraphCMS as a data source.",
-  "keywords": [
-    "data",
-    "gatsby",
-    "gatsby-plugin",
-    "graphcms",
-    "graphql",
-    "source"
+  "private": true,
+  "workspaces": [
+    "demo",
+    "gatsby-source-graphcms"
   ],
-  "homepage": "https://github.com/GraphCMS/gatsby-source-graphcms",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/GraphCMS/gatsby-source-graphcms.git"
-  },
-  "bugs": {
-    "url": "https://github.com/GraphCMS/gatsby-source-graphcms/issues"
-  },
-  "license": "MIT",
-  "author": "Angel Piscola <angelpiscola@gmail.com>",
-  "deprecated": false,
-  "main": "index.js",
   "scripts": {
-    "test": "yarn lint && jest",
-    "build": "yarn test && babel src --out-dir . --ignore __tests__",
-    "watch": "babel -w src --out-dir . --ignore __tests__",
-    "lint": "xo --fix",
-    "prepare": "cross-env NODE_ENV=production npm run build"
-  },
-  "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-eslint": "9.0.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.7.0",
-    "cross-env": "5.2.0",
-    "jest": "23.6.0",
-    "jest-cli": "23.6.0",
-    "xo": "0.24.0"
-  },
-  "dependencies": {
-    "babel-runtime": "^6.26.0",
-    "graphql-request": "^1.5.1",
-    "pluralize": "^7.0.0",
-    "ramda": "^0.25.0"
-  },
-  "xo": {
-    "space": true,
-    "quotes": "backtick",
-    "parser": "babel-eslint",
-    "overrides": [
-      {
-        "files": "src/__tests__/*.js",
-        "env": [
-          "jest"
-        ]
-      }
-    ]
-  },
-  "renovate": {
-    "extends": [
-      "config:base",
-      "docker:disable"
-    ],
-    "labels": [
-      "renovate"
-    ],
-    "assignees": [
-      "rdela"
-    ],
-    "devDependencies": {
-      "schedule": [
-        "on the first day of the month"
-      ],
-      "automerge": true,
-      "major": {
-        "automerge": false
-      }
-    },
-    "enabledManagers": [
-      "npm"
-    ]
-  },
-  "release": {
-    "branches": [
-      {
-        "name": "master"
-      },
-      {
-        "name": "next",
-        "prerelease": true
-      }
-    ]
+    "build": "yarn workspace demo build",
+    "clean": "yarn workspace demo clean",
+    "dev": "yarn workspace demo dev"
   }
 }
