--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -13,6 +13,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "gatsby-graphql-source-toolkit": "0.2.0"
+    "gatsby-graphql-source-toolkit": "0.2.0",
+    "pluralize": "8.0.0"
   }
 }
