--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-graphcms",
-  "version": "1.0.0-alpha.3",
+  "version": "2.0.0",
   "description": "Gatsby source plugin for building websites using the GraphCMS as a data source.",
   "main": "index.js",
   "keywords": [
