--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "gatsby-graphql-source-toolkit": "0.2.2",
+    "gatsby-source-filesystem": "2.3.18",
     "pluralize": "8.0.0"
   }
 }
