chore: Add ENABLE_GATSBY_REFRESH_ENDPOINT flag for rebuilds

--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "dev": "gatsby develop"
+    "dev": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop"
   },
   "dependencies": {
     "gatsby": "2.23.22",
