--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "gatsby": "2.23.22",
+    "gatsby-image": "2.4.13",
+    "gatsby-plugin-sharp": "2.6.19",
     "gatsby-source-graphcms": "2.0.0",
+    "gatsby-transformer-sharp": "2.5.11",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
