--- a/package.json
+++ b/package.json
@@ -59,6 +59,28 @@
       }
     ]
   },
+  "release": {
+    "branches": [
+      {
+        "name": "master"
+      },
+      {
+        "name": "next",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/npm",
+        {
+          "pkgRoot": "gatsby-source-graphcms"
+        }
+      ],
+      "@semantic-release/github"
+    ]
+  },
   "renovate": {
     "extends": [
       "config:base",
