--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-graphcms",
   "version": "2.0.0",
-  "description": "Gatsby source plugin for building websites using the GraphCMS as a data source.",
+  "description": "The official Gatsby source plugin for GraphCMS projects",
   "main": "index.js",
   "keywords": [
     "data",
