--- a/demo/package.json
+++ b/demo/package.json
@@ -9,8 +9,16 @@
   },
   "dependencies": {
     "gatsby": "2.23.22",
+    "gatsby-image": "2.4.13",
+    "gatsby-plugin-postcss": "2.3.11",
+    "gatsby-plugin-sharp": "2.6.19",
     "gatsby-source-graphcms": "2.0.0",
+    "gatsby-transformer-sharp": "2.5.11",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "postcss-preset-env": "6.7.0",
+    "tailwindcss": "1.4.6"
   }
 }
