--- a/package.json
+++ b/package.json
@@ -82,5 +82,27 @@
     "enabledManagers": [
       "npm"
     ]
-  }
+  },
+  "release": {
+    "branches": [
+      {
+        "name": "master"
+      },
+      {
+        "name": "next",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/npm",
+        {
+          "pkgRoot": "gatsby-source-graphcms"
+        }
+      ],
+      "@semantic-release/github"
+    ]
+  },
 }
