--- a/demo/package.json
+++ b/demo/package.json
@@ -8,8 +8,11 @@
     "dev": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop"
   },
   "dependencies": {
+    "@mdx-js/mdx": "1.6.16",
+    "@mdx-js/react": "1.6.16",
     "gatsby": "2.23.22",
     "gatsby-image": "2.4.13",
+    "gatsby-plugin-mdx": "1.2.30",
     "gatsby-plugin-postcss": "2.3.11",
     "gatsby-plugin-sharp": "2.6.19",
     "gatsby-source-graphcms": "2.0.0",
