--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -3,6 +3,9 @@
   "version": "2.0.0",
   "description": "The official Gatsby source plugin for GraphCMS projects",
   "main": "index.js",
+  "scripts": {
+    "build": "babel src --out-dir ./ --source-maps"
+  },
   "keywords": [
     "data",
     "gatsby",
