chore: Compile with Babel (#132)
* chore(deps): Add babel dependencies

* refactor: Move gatsby-node.js to src

* chore: .babelrc

* chore: Update .gitignore

* chore: Add .npmignore

* chore: Update GitHub Action workflow

* chore: Add build script to gatsby-source-graphcms/package.json

* chore: Run compile script before gatsby develop, gatsby build

* chore: preinstall script

--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "dev": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop"
+    "preinstall": "cd ../gatsby-source-graphcms && yarn build",
+    "dev": "gatsby develop"
   },
   "dependencies": {
     "@mdx-js/mdx": "1.6.18",
