chore(deps): Bump gatsby-source-filesystem dependency
Use next release tag

--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@babel/runtime": "7.12.1",
     "gatsby-graphql-source-toolkit": "0.6.3",
-    "gatsby-source-filesystem": "2.3.31",
+    "gatsby-source-filesystem": "2.7.0-next.1",
     "he": "1.2.0",
     "node-fetch": "2.6.1"
   },
