chore: Update branches configuration for semantic-release
Required until https://github.com/semantic-release/semantic-release/issues/1581 lands

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dev": "yarn workspace demo dev"
   },
   "release": {
+    "branches": [
+      "main"
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
