--- a/demo/package.json
+++ b/demo/package.json
@@ -12,7 +12,7 @@
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
     "gatsby": "3.1.0",
-    "gatsby-image": "3.1.0",
+    "gatsby-plugin-image": "1.1.0",
     "gatsby-plugin-mdx": "2.1.0",
     "gatsby-plugin-postcss": "4.1.0",
     "gatsby-plugin-sharp": "3.1.0",
