--- a/demo/package.json
+++ b/demo/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "gatsby": "2.32.11",
-    "gatsby-image": "2.11.0",
-    "gatsby-plugin-mdx": "1.10.1",
-    "gatsby-plugin-postcss": "2.3.13",
-    "gatsby-plugin-sharp": "2.14.3",
+    "gatsby": "3.1.0",
+    "gatsby-plugin-image": "1.1.0",
+    "gatsby-plugin-mdx": "2.1.0",
+    "gatsby-plugin-postcss": "4.1.0",
+    "gatsby-plugin-sharp": "3.1.0",
     "gatsby-source-graphcms": "2.0.0",
-    "gatsby-transformer-sharp": "2.12.1",
-    "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "gatsby-transformer-sharp": "3.1.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "babel-preset-gatsby": "1.1.0",
     "postcss-preset-env": "6.7.0",
     "tailwindcss": "1.9.6"
   }
