--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -27,5 +27,8 @@
     "@babel/core": "7.12.10",
     "@babel/plugin-transform-runtime": "7.12.10",
     "@babel/preset-env": "7.12.11"
+  },
+  "peerDependencies": {
+    "gatsby-plugin-image": "1.1.0"
   }
 }
