--- a/demo/package.json
+++ b/demo/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "gatsby": "3.1.0",
+    "gatsby": "3.1.2",
     "gatsby-plugin-image": "1.1.0",
     "gatsby-plugin-mdx": "2.1.0",
     "gatsby-plugin-postcss": "4.1.0",
+    "gatsby-plugin-sharp": "3.1.2",
     "gatsby-source-graphcms": "2.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
