--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "7.12.5",
+    "gatsby-core-utils": "2.1.0",
     "gatsby-graphql-source-toolkit": "0.6.3",
     "gatsby-source-filesystem": "2.11.1",
     "he": "1.2.0",
