--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -4,7 +4,22 @@
   ],
   "imageSize": 100,
   "commit": false,
-  "contributors": [],
+  "contributors": [
+    {
+      "login": "ynnoj",
+      "name": "Jonathan Steele",
+      "avatar_url": "https://avatars.githubusercontent.com/u/3578709?v=4",
+      "profile": "http://jonathan.steele.pro",
+      "contributions": [
+        "code",
+        "blog",
+        "example",
+        "ideas",
+        "maintenance",
+        "projectManagement"
+      ]
+    }
+  ],
   "contributorsPerLine": 7,
   "projectName": "gatsby-source-graphcms",
   "projectOwner": "GraphCMS",
