chore(ci): update release branches

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "release": {
     "branches": [
-      "main"
+      "main",
+      {
+        "name": "next",
+        "prerelease": true
+      }
     ],
     "plugins": [
       "@semantic-release/commit-analyzer",
