--- a/demo/package.json
+++ b/demo/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "gatsby": "3.4.1",
-    "gatsby-plugin-image": "1.4.0",
-    "gatsby-plugin-mdx": "2.4.0",
-    "gatsby-plugin-postcss": "4.4.0",
-    "gatsby-plugin-sharp": "3.4.1",
+    "gatsby": "alpha-9689ff",
+    "gatsby-plugin-image": "alpha-9689ff",
+    "gatsby-plugin-mdx": "alpha-9689ff",
+    "gatsby-plugin-postcss": "alpha-9689ff",
+    "gatsby-plugin-sharp": "alpha-9689ff",
     "gatsby-source-graphcms": "2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
