--- a/gatsby-source-graphcms/.babelrc
+++ b/gatsby-source-graphcms/.babelrc
@@ -4,13 +4,11 @@
       "@babel/preset-env",
       {
         "targets": {
-          "node": true
+          "node": 14.15
         }
       }
     ]
   ],
-  "plugins": [
-    "@babel/plugin-transform-runtime"
-  ],
+  "plugins": ["@babel/plugin-transform-runtime"],
   "only": ["src/", "test/"]
 }
