--- a/demo/package.json
+++ b/demo/package.json
@@ -6,22 +6,23 @@
     "build": "gatsby build",
     "clean": "gatsby clean",
     "preinstall": "cd ../gatsby-source-graphcms && yarn build",
-    "dev": "gatsby develop"
+    "dev": "gatsby develop",
+    "serve": "gatsby serve"
   },
   "dependencies": {
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "gatsby": "alpha-9689ff",
-    "gatsby-plugin-image": "alpha-9689ff",
-    "gatsby-plugin-mdx": "alpha-9689ff",
-    "gatsby-plugin-postcss": "alpha-9689ff",
-    "gatsby-plugin-sharp": "alpha-9689ff",
+    "gatsby": "4.0.0-alpha-9689ff.12",
+    "gatsby-plugin-image": "4.0.0-alpha-9689ff.12",
+    "gatsby-plugin-mdx": "3.0.0-4.0.0-alpha-9689ff.12.12",
+    "gatsby-plugin-postcss": "4.0.0-4.0.0-alpha-9689ff.12.12",
+    "gatsby-plugin-sharp": "4.0.0-alpha-9689ff.12",
     "gatsby-source-graphcms": "2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "babel-preset-gatsby": "1.4.0",
+    "babel-preset-gatsby": "^1.13.0",
     "postcss-preset-env": "6.7.0",
     "tailwindcss": "1.9.6"
   }
