--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -17,9 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "7.12.5",
-    "gatsby-core-utils": "alpha-9689ff",
-    "gatsby-graphql-source-toolkit": "0.6.3",
-    "gatsby-source-filesystem": "alpha-9689ff",
+    "gatsby-core-utils": "4.0.0-alpha-9689ff.12",
+    "gatsby-graphql-source-toolkit": "^2.0.1",
+    "gatsby-source-filesystem": "4.0.0-alpha-9689ff.12",
     "he": "1.2.0",
     "node-fetch": "2.6.1"
   },
