--- a/demo/package.json
+++ b/demo/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "gatsby": "4.0.0-alpha-9689ff.12",
-    "gatsby-plugin-image": "4.0.0-alpha-9689ff.12",
-    "gatsby-plugin-mdx": "3.0.0-4.0.0-alpha-9689ff.12.12",
-    "gatsby-plugin-postcss": "4.0.0-4.0.0-alpha-9689ff.12.12",
-    "gatsby-plugin-sharp": "4.0.0-alpha-9689ff.12",
+    "gatsby": "4.0.0-next.0",
+    "gatsby-plugin-image": "2.0.0-next.0",
+    "gatsby-plugin-mdx": "3.0.0-next.0",
+    "gatsby-plugin-postcss": "5.0.0-next.0",
+    "gatsby-plugin-sharp": "4.0.0-next.0",
     "gatsby-source-graphcms": "2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
