--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -17,9 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "7.12.5",
-    "gatsby-core-utils": "4.0.0-alpha-9689ff.12",
+    "gatsby-core-utils": "3.0.0-next.0",
     "gatsby-graphql-source-toolkit": "^2.0.1",
-    "gatsby-source-filesystem": "4.0.0-alpha-9689ff.12",
+    "gatsby-source-filesystem": "4.0.0-next.0",
     "he": "1.2.0",
     "node-fetch": "2.6.1"
   },
@@ -30,7 +30,10 @@
     "@babel/preset-env": "7.12.11"
   },
   "peerDependencies": {
-    "gatsby": "^4.0.0",
-    "gatsby-plugin-image": "^1.0.0"
+    "gatsby": "^4.0.0-next",
+    "gatsby-plugin-image": "^2.0.0-next"
+  },
+  "engines": {
+    "node": ">=14.15.0"
   }
 }
