feat: add support for Gatsby v4 (#206)

--- a/gatsby-source-graphcms/.babelrc
+++ b/gatsby-source-graphcms/.babelrc
@@ -9,8 +9,6 @@
       }
     ]
   ],
-  "plugins": [
-    "@babel/plugin-transform-runtime"
-  ],
+  "plugins": ["@babel/plugin-transform-runtime"],
   "only": ["src/", "test/"]
 }
