--- a/gatsby-source-graphcms/package.json
+++ b/gatsby-source-graphcms/package.json
@@ -16,22 +16,22 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "7.12.5",
-    "gatsby-core-utils": "3.0.0-next.0",
+    "@babel/runtime": "7.16.7",
+    "gatsby-core-utils": "3.4.0",
     "gatsby-graphql-source-toolkit": "^2.0.1",
-    "gatsby-source-filesystem": "4.0.0-next.0",
+    "gatsby-source-filesystem": "4.4.0",
     "he": "1.2.0",
     "node-fetch": "2.6.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.12.10",
-    "@babel/core": "7.12.10",
-    "@babel/plugin-transform-runtime": "7.12.10",
-    "@babel/preset-env": "7.12.11"
+    "@babel/cli": "7.16.7",
+    "@babel/core": "7.16.7",
+    "@babel/plugin-transform-runtime": "7.16.7",
+    "@babel/preset-env": "7.16.7"
   },
   "peerDependencies": {
-    "gatsby": "^4.0.0-next",
-    "gatsby-plugin-image": "^2.0.0-next"
+    "gatsby": "^4.0.0",
+    "gatsby-plugin-image": "^2.0.0"
   },
   "engines": {
     "node": ">=14.15.0"
