--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -4,7 +4,7 @@
   ],
   "imageSize": 100,
   "commit": false,
-  "badgeTemplate": `<img src="https://img.shields.io/badge/all_contributors-1-purple.svg" alt="Contributors" />`,
+  "badgeTemplate": "<img src=\"https://img.shields.io/badge/all_contributors-1-purple.svg\" alt=\"Contributors\" />",
   "contributors": [
     {
       "login": "ynnoj",
