--- a/demo/package.json
+++ b/demo/package.json
@@ -6,23 +6,24 @@
     "build": "gatsby build",
     "clean": "gatsby clean",
     "preinstall": "cd ../gatsby-source-graphcms && yarn build",
-    "dev": "gatsby develop"
+    "dev": "gatsby develop",
+    "serve": "gatsby serve"
   },
   "dependencies": {
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "gatsby": "3.4.1",
-    "gatsby-plugin-image": "1.4.0",
-    "gatsby-plugin-mdx": "2.4.0",
-    "gatsby-plugin-postcss": "4.4.0",
-    "gatsby-plugin-sharp": "3.4.1",
+    "gatsby": "4.4.0",
+    "gatsby-plugin-image": "2.4.0",
+    "gatsby-plugin-mdx": "3.4.0",
+    "gatsby-plugin-postcss": "5.4.0",
+    "gatsby-plugin-sharp": "4.4.0",
     "gatsby-source-graphcms": "2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "babel-preset-gatsby": "1.4.0",
-    "postcss-preset-env": "6.7.0",
-    "tailwindcss": "1.9.6"
+    "babel-preset-gatsby": "^2.4.0",
+    "postcss-preset-env": "7.2.0",
+    "tailwindcss": "3.0.12"
   }
 }
