--- a/demo/package.json
+++ b/demo/package.json
@@ -5,25 +5,26 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "preinstall": "cd ../gatsby-source-graphcms && yarn build",
     "dev": "gatsby develop",
     "serve": "gatsby serve"
   },
   "dependencies": {
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "gatsby": "4.4.0",
-    "gatsby-plugin-image": "2.4.0",
-    "gatsby-plugin-mdx": "3.4.0",
-    "gatsby-plugin-postcss": "5.4.0",
-    "gatsby-plugin-sharp": "4.4.0",
-    "gatsby-source-graphcms": "2.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "gatsby": "^4.4.0",
+    "gatsby-plugin-image": "^2.5.1",
+    "gatsby-plugin-mdx": "^3.5.2",
+    "gatsby-plugin-postcss": "^5.5.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-source-filesystem": "^4.5.2",
+    "gatsby-source-graphcms": "^2.7.0",
+    "gatsby-transformer-sharp": "^4.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "babel-preset-gatsby": "^2.4.0",
-    "postcss-preset-env": "7.2.0",
-    "tailwindcss": "3.0.12"
+    "babel-preset-gatsby": "^2.5.2",
+    "postcss-preset-env": "^7.2.3",
+    "tailwindcss": "^3.0.15"
   }
 }
