--- a/demo/package.json
+++ b/demo/package.json
@@ -17,7 +17,7 @@
     "gatsby-plugin-postcss": "^5.5.0",
     "gatsby-plugin-sharp": "^4.4.0",
     "gatsby-source-filesystem": "^4.5.2",
-    "gatsby-source-graphcms": "^2.7.0",
+    "gatsby-source-graphcms": "^2.7.1-next.1",
     "gatsby-transformer-sharp": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
